# story-gen

./: .gitignore  CLAUDE.md  GEMINI.md  PROMPT_REFINEMENT_IMPLEMENTATION.md  README.md  main.py  pyproject.toml  sample.json
agents/: __init__.py  agent.py  idea_agent.py  idea_agent_adk.py  scene_development_agent_adk.py  video_quality_agent.py
docs/guides/: AGENT_GUIDE.md
docs/planning/: PROMPT_ANALYSIS_AND_RECOMMENDATIONS.md
handlers/: audio_handlers.py  idea_handlers.py  story_handlers.py  ui_handlers.py  video_handlers.py
models/: config.py  exceptions.py
prompts/idea_generation/: critique_story_user.md  initial_story_user.md  initial_user_prompt.md  quality_decision.md  refine_story_user.md  story_critic.md  story_generator.md  story_refiner.md
prompts/quality_validation/: anatomy_validator.md  consistency_validator.md  gemini_analysis_user.md  prompt_refinement.md  quality_decision.md  refinement_user.md  technical_validator.md
prompts/story_development/: develop_story.md  develop_story_user.md  generate_story.md  generate_story_user.md  update_story.md  update_story_user.md
tests/examples/: example_adk_comparison.py  example_scene_comparison.py  test_video_quality_agent_example.py
tests/integration/: test_adk_agent.py  test_agent.py  (+1 more)
ui/: big_thing_tab.py  idea_tab.py  short_ingredients_tab.py  story_tab.py  visual_storyboard_tab.py  visual_storyboard_v31_tab.py
utils/: acceptance.py  ce_audio.py  config.py  gen_image.py  gen_video.py  llm.py  logger.py  prompt_templates.py  save_files.py  status_helper.py  video_analysis.py  video_ts.py
(+14 files in other folders)
